# regex-generator

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.json  definition__regex.json
regex_generator/: __init__.py  init.py
regex_generator/config/: config.json
regex_generator/libs/: __init__.py  create_regex_collections.py  generator.py  select_regex.py
src/: DefinitionIngestor.py  RegexGenerator.py
