[tool.poetry]
name = "regex-generator-env"
version = "0.1.0"
description = ""
authors = ["Tomoya Wada"]
license = "MIT"
readme = "README.md"
packages = [{include = "regex_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pip = "^23.1.2"
regex-generator = {path = "dist/regex_generator-0.0.1-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
